force-app/main/default/objects/Ecss_Customer_Info__c/Ecss_Customer_Info__c.object-meta.xml
<CustomObject>
    <label>Ecss Customer Info</label>
    <nameField>
        <label>Ecss Customer Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecss Customer Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>