force-app/main/default/objects/Ecss_Customer_Info__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>