force-app/main/default/objects/Ecss_Customer_Info__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>