force-app/main/default/objects/Ecss_Customer_Info__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ecss Customer Infos</relationshipLabel>
    <relationshipName>Ecss_Customer_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>