force-app/main/default/objects/Ecss_Customer_Info__c/fields/dataSupplierCode__c.field-meta.xml
<CustomField>
    <fullName>dataSupplierCode__c</fullName>
    <label>DataSupplierCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>