force-app/main/default/objects/Ecss_Customer_Info__c/fields/dataSupplierName__c.field-meta.xml
<CustomField>
    <fullName>dataSupplierName__c</fullName>
    <label>DataSupplierName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>