force-app/main/default/objects/Ecss_Customer_Info__c/fields/ecss_result__c.field-meta.xml
<CustomField>
    <fullName>ecss_result__c</fullName>
    <label>ecssResult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>