force-app/main/default/objects/Ecss_Customer_Info__c/fields/LawsAndRegulation__c.field-meta.xml
<CustomField>
    <fullName>LawsAndRegulation__c</fullName>
    <label>LawsAndRegulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>