force-app/main/default/objects/Ecss_Customer_Info__c/fields/listType__c.field-meta.xml
<CustomField>
    <fullName>listType__c</fullName>
    <label>ListType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>