force-app/main/default/objects/Ecss_Customer_Info__c/fields/matchedResult__c.field-meta.xml
<CustomField>
    <fullName>matchedResult__c</fullName>
    <label>MatchedResult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>