force-app/main/default/objects/Ecss_Customer_Info__c/fields/referenceId__c.field-meta.xml
<CustomField>
    <fullName>referenceId__c</fullName>
    <label>ReferenceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>