force-app/main/default/objects/Ecss_Customer_Info__c/fields/Req_Name__c.field-meta.xml
<CustomField>
    <fullName>Req_Name__c</fullName>
    <label>Req Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>