force-app/main/default/objects/Ecss_Customer_Info__c/fields/street__c.field-meta.xml
<CustomField>
    <fullName>street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>