force-app/main/default/objects/Ecss_Customer_Info__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>