force-app/main/default/objects/Ecss_Customer_Info__c/fields/zip__c.field-meta.xml
<CustomField>
    <fullName>zip__c</fullName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>